--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; For the girl I love</small><a href="https://www.hitwebcounter.com" target="_blank">
+            <div class="container"><small>Copyright &copy; For the girl I love</small><br>Number of Views <a href="https://www.hitwebcounter.com" target="_blank">
                 <img src="https://hitwebcounter.com/counter/counter.php?page=7988209&style=0001&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>        </div>
         </div>
         <!-- Bootstrap core JS-->
