--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/me.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/me.png" alt="..." style="border-radius: 50% 50%;"/>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Hi, I'm Nicco...madly in love with Faye</h1>
                 <!-- Icon Divider-->
